# drosophila

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: crosscompile.sh  options.cmake  win32.cmake  win64.cmake
data/: CMakeLists.txt  openings.txt
engine/: CMakeLists.txt  bitboard.c  bitboard.h  defines.h  engine.c  engine.h  eval.c  eval.h  eval_piecesquare.h  fen.c  fen.h  history.c  history.h  move.c  move.h  movegen.c  movegen.h  moveorder.c  moveorder.h  openingbook.c  openingbook.h  san.c  search.c  search.h  search_alphabeta.c  search_alphabeta.h  search_minimax.c  search_minimax.h  search_mtdf.c  search_mtdf.h  search_quiescence.c  search_quiescence.h  state.c  state.h  time.c  ttable.c  ttable.h
interface/: CMakeLists.txt  cecp.c  cecp_features.h  io.c  io.h
src/: CMakeLists.txt  tags
src/engine/: CMakeLists.txt  bitboard.c  bitboard.h  bitboard_zobrist.c  clock.c  clock.h  defines.h  engine.c  engine.h  eval.c  eval.h  eval_piecesquare.c  eval_piecesquare.h  fen.c  fen.h  hashtable.c  hashtable.h  history.c  history.h  movegen.c  movegen.h  moveorder.c  moveorder.h  openingbook.c  openingbook.h  polyglot.c  polyglot.h  san.c  san.h  search.c  search.h  search_alphabeta.c  search_alphabeta.h  search_mtdf.c  search_mtdf.h  search_nullwindow.c  search_nullwindow.h  see.c  see.h  state.c  (+7 more)
src/interface/: CMakeLists.txt  cecp.c  cecp_features.h  io.c  io.h  uci.c
src/tests/: CMakeLists.txt  test_bitboard.c  test_eval.c  test_moves.c  test_performance.c  test_perft.c  test_polyglot.c  test_see.c  test_state.c
src/tools/: generate_openingbook.c
src/tuning/: CMakeLists.txt  pgn.cpp  pgn.hpp  tuner.c  tuner.cpp
tests/: CMakeLists.txt  test_perft.c
tools/: CMakeLists.txt  generate_openingbook.c  make-book.sh
unittests/: CMakeLists.txt  test_bitboard.c  test_moves.c  test_perft.c  test_search.c  test_state.c
