set(files
    bitboard.c
    bitboard.h
    defines.h
    engine.c
    engine.h
    eval.c
    eval.h
    eval_piecesquare.h
    fen.c
    fen.h
    history.c
    history.h
    movegen.c
    movegen.h
    moveorder.c
    moveorder.h
    openingbook.c
    openingbook.h
    san.c
    san.h
    search.c
    search.h
    search_alphabeta.c
    search_alphabeta.h
    search_minimax.c
    search_minimax.h
    search_mtdf.c
    search_mtdf.h
    state.c
    state.h
    time.c
    time.h
    ttable.c
    ttable.h
)

add_library(
    pawnedengine
    ${files}
)

