set(files
    bitboard.c
    bitboard.h
    bitboard_zobrist.c
    defines.h
    engine.c
    engine.h
    eval.c
    eval.h
    eval_piecesquare.c
    fen.c
    fen.h
    hashtable.c
    hashtable.h
    history.c
    history.h
    movegen.c
    movegen.h
    moveorder.c
    moveorder.h
    openingbook.c
    openingbook.h
    san.c
    san.h
    search.c
    search.h
    search_mtdf.c
    search_mtdf.h
    search_nullwindow.c
    search_nullwindow.h
    see.c
    see.h
    state.c
    state.h
    time.c
    time.h
    thread.c
    thread.h
)

add_library(
    pawnedengine
    ${files}
)

